--- a/custom/home.html
+++ b/custom/home.html
@@ -68,7 +68,7 @@
             </ul>
 
             <div style="display:flex;gap:1rem;">
-                <a href="https://learninglab.gitlabpages.inria.fr/serious-game/smartphone/PrintAndPlay/index.html" class="card-button">Print & play</a>
+                <a href="PrintAndPlay/index.html" class="card-button">Version gratuite</a>
                 <a href="https://boutique.inria.ecoessentials.fr/" class="card-button">Acheter une boîte</a>
             </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="card">
             <h3>Droits d’utilisation</h3>
             <p>Prenez connaissance des conditions générales d’utilisation pour jouer, partager et organiser des sessions en toute conformité.</p>
-            <a href="https://learninglab.gitlabpages.inria.fr/serious-game/smartphone/CGU.html" class="card-button">En savoir plus</a>
+            <a href="CGU.html" class="card-button">En savoir plus</a>
         </div>
     <p></p>
     <div style="text-align:center;">
